Fixed spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -126,7 +126,7 @@ nav {
 }
 
 .polaroid-picture {
-  margin: 30px 0 30px 18%;
+  margin: 30px 0 10px 18%;
   border: solid  white;
   border-width: 10px 10px 60px 10px;
   border-radius: 5px;
@@ -199,8 +199,12 @@ nav {
   display: none;
 }
 
-.villager--stats {
+/* Card */
+
+.card {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .villager--type {
@@ -211,13 +215,15 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 10px;
+  margin-right: 20px;
+  color: #756B5D;
 }
 
 .villager--species {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #756B5D;
 }
 
 .villager--personality > h3, .villager--species > h3 {
@@ -242,6 +248,7 @@ nav {
   margin: auto;
   width: 60%;
   margin: 0;
+  color: #756B5D;
 }
 
 .villager--birthday > img {
@@ -254,18 +261,15 @@ nav {
   padding-right: 5px;
 }
 
-.star-sign {
-  height: 24px;
-}
-
 .bottom-stats {
   display: flex;
   justify-content: space-around;
   width: 100%;
   margin: 0;
   padding-top: 0;
+  padding-left: 15px;
   position: absolute;
-  bottom: -75px;
+  bottom: 8px;
 }
 
 .text-bubble {
@@ -287,12 +291,15 @@ nav {
   top: 20px;
   width: 100%;
   transform: rotate(-5deg);
+  color: #756B5D;
 }
 
 .villager--hobby {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-right: 20px;
+  color: #756B5D;
 }
 
 .villager--hobby > h4 {
